fix word wrapping for code block (fix for 9f6b4bd2)

--- a/frontend/src/messageBody.styl
+++ b/frontend/src/messageBody.styl
@@ -92,6 +92,7 @@
     padding: 0;
     background: none;
     font-size: 0.8rem;
+    white-space: pre-wrap;
   }
 
 }
